Modernize LocalSnapshotStore
Use java.nio.file.Path and related NIO utilities to provide the same
functionality with more modern tools.

Change-Id: I4a2999e267f38189f7aa55bb40ac534142425d16
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>